crates/next-custom-transforms/tests/errors/server-actions/server-graph/8/output.js
import { registerServerReference } from "private-next-rsc-server-reference";
export const $$RSC_SERVER_ACTION_0 = async function foo() {
    'use strict';
};
registerServerReference($$RSC_SERVER_ACTION_0, "006a88810ecce4a4e8b59d53b8327d7e98bbf251d7", null);
/* __next_internal_action_entry_do_not_use__ {"006a88810ecce4a4e8b59d53b8327d7e98bbf251d7":"$$RSC_SERVER_ACTION_0"} */ const foo = $$RSC_SERVER_ACTION_0;
const bar = async ()=>{
    const x = 1;
    // prettier-ignore
    'use server';
};
